# unity-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  package.json  pnpm-lock.yaml
.claude-plugin/plugins/unity-cli/skills/unity-csharp-edit/: SKILL.md
.claude-plugin/plugins/unity-cli/skills/unity-csharp-navigate/: SKILL.md
.claude-plugin/plugins/unity-cli/skills/unity-editor-tools/: SKILL.md
.claude-plugin/plugins/unity-cli/skills/unity-input-system/: SKILL.md
.claude/commands/: release.md
.github/workflows/: release.yml  test.yml
UnityCliBridge/Assets/Editor/: UiTestSceneGenerator.cs  UnityCliUiTestSceneGenerator.cs
UnityCliBridge/Assets/Scenes/: MCP_UI_IMGUI_TestScene.unity  MCP_UI_UGUI_TestScene.unity  MCP_UI_UITK_TestScene.unity  UnityCli_UI_AllSystems_TestScene.unity  UnityCli_UI_IMGUI_TestScene.unity  UnityCli_UI_UGUI_TestScene.unity  UnityCli_UI_UITK_TestScene.unity
UnityCliBridge/Assets/Scripts/UiTest/: AllUiSystemsTestBootstrap.cs  ImguiTestPanel.cs  UGuiTestSceneController.cs  UiToolkitTestSceneController.cs
UnityCliBridge/ProjectSettings/: ProjectSettings.asset
docs/: README.md  benchmark-results.md  configuration.md  constitution_update_checklist.md  development.md
docs/troubleshooting/: README.md  capabilities-none.md
scripts/: e2e-test.sh
specs/: README.md  architecture.md  migration-notes.md  specs.md
specs/SPEC-56860fa4/: spec.md
specs/SPEC-83d9d7ee/: spec.md
specs/SPEC-e757a01f/: spec.md
src/: cli.rs  config.rs  instances.rs  local_tools.rs  lsp.rs  lsp_manager.rs  lspd.rs  main.rs  transport.rs
(+2 files in other folders)
