[package]
name = "unity-cli"
version = "0.1.0"
edition = "2021"
description = "Rust CLI for Unity Editor automation over Unity MCP TCP protocol"
license = "MIT"
repository = "https://github.com/akiojin/unity-cli"

[[bin]]
name = "unity-cli"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "net", "io-util", "rt-multi-thread", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
regex = "1.12"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"
